testdata/baselines/reference/submodule/compiler/moduleResolutionWithSuffixes_one_jsModule.errors.txt
/foo.ios.js(3,10): error TS2300: Duplicate identifier 'ios'.
/foo.ios.js(4,9): error TS2300: Duplicate identifier 'ios'.
/foo.js(3,10): error TS2300: Duplicate identifier 'base'.
/foo.js(4,9): error TS2300: Duplicate identifier 'base'.


==== /tsconfig.json (0 errors) ====
    {
    	"compilerOptions": {
    		"allowJs": true,
    		"checkJs": false,
    		"outDir": "bin",
    		"moduleResolution": "node",
    		"traceResolution": true,
    		"moduleSuffixes": [".ios"]
    	}
    }
    
==== /index.ts (0 errors) ====
    import { ios } from "./foo.js";
==== /foo.ios.js (2 errors) ====
    "use strict";
    exports.__esModule = true;
    function ios() {}
             ~~~
!!! error TS2300: Duplicate identifier 'ios'.
    exports.ios = ios;
            ~~~
!!! error TS2300: Duplicate identifier 'ios'.
==== /foo.js (2 errors) ====
    "use strict";
    exports.__esModule = true;
    function base() {}
             ~~~~
!!! error TS2300: Duplicate identifier 'base'.
    exports.base = base;
            ~~~~
!!! error TS2300: Duplicate identifier 'base'.
    